packages/typ/tests/fixtures/diagnostics/0974_mli_binary_type_underapplied_04.mli.expected
File "0974_mli_binary_type_underapplied_04.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0974_mli_binary_type_underapplied_04 is not a valid module name.

File "0974_mli_binary_type_underapplied_04.mli", line 2, characters 14-28:
2 | val x_delta : int pair_delta
                  ^^^^^^^^^^^^^^
Error: The type constructor pair_delta expects 2 argument(s),
       but is here applied to 1 argument(s)
